# formatid

./: .dockerignore  .gitignore  AGENTS.md  README.md
.github/workflows/: compose-smoke-test.yml
agent/: README.md
apps/g2b_ingest/: README.md  __init__.py  dashboard.py
core/: __init__.py
docs/: data.md  notice.md
docs/tasks/: pps.md
domains/: __init__.py
infra/: README.md  docker-compose.yml
pipeline/: .env.dev  .env.pipeline  README.md  pyproject.toml  requirements.txt
pipeline/app/: main.py
pipeline/app/clients/g2b/: __init__.py  bid_notice_client.py
pipeline/app/core/: config.py  db.py  deps.py  logger.py
pipeline/app/db/: engine.py  indexes.py  init_db.py  tables.py
pipeline/app/db/repositories/: attachment_repo.py  bid_notice_repo.py
pipeline/app/jobs/: collect_bid_notice_job.py  download_attachment_job.py  sample_collect_job.py
pipeline/app/resources/catalogs/: bid_group_catalog.json
pipeline/app/resources/loaders/: bid_group_catalog.py
pipeline/app/services/: attachment_extractor.py  bid_service.py  g2b_client.py  notice_mapper.py
pipeline/app/services/attachment/: downloader.py  service.py
pipeline/app/services/bid_notice/: mapper.py  preprocessor.py  service.py
pipeline/app/utils/: timing.py  type_parser.py
scripts/: check_dlq.py  check_task.py  check_workers.py  enqueue_job.py  generate_compose.py  ops.py  ops_lib.py  requeue_dlq.py  run_compose_smoke_test.py
shared/: domain_catalog.py  platform_service_catalog.py  postgres_url.py  schedule_catalog.py  service_catalog.py  time.py
tasks/: __init__.py  catalog.json
(+480 files in other folders)
